@startuml

title __REGISTRAZIONE's Class Diagram__\n

  namespace  {
    namespace om.unidates.Unidates.UniDates {
      namespace Manager {
        namespace Registrazione {
          interface com.unidates.Unidates.UniDates.Manager.Registrazione.ConfermaRegistrazione {
              {abstract} + confermaRegistrazione()
          }
        }
      }
    }
  }
  

  namespace  {
    namespace om.unidates.Unidates.UniDates {
      namespace Manager {
        namespace Registrazione {
          class com.unidates.Unidates.UniDates.Manager.Registrazione.OnRegistrationCompleteEvent {
              - appUrl : String
              - locale : Locale
              + OnRegistrationCompleteEvent()
              + getAppUrl()
              + getLocale()
              + getUtente()
              + setAppUrl()
              + setLocale()
              + setUtente()
          }
        }
      }
    }
  }
  

  namespace  {
    namespace om.unidates.Unidates.UniDates {
      namespace Manager {
        namespace Registrazione {
          class com.unidates.Unidates.UniDates.Manager.Registrazione.Publisher {
              - publisher : ApplicationEventPublisher
              + Publisher()
              + publishOnRegistrationEvent()
          }
        }
      }
    }
  }
  

  namespace  {
    namespace om.unidates.Unidates.UniDates {
      namespace Manager {
        namespace Registrazione {
          class com.unidates.Unidates.UniDates.Manager.Registrazione.RegistrationListener {
              - mailSender : JavaMailSender
              + confermaRegistrazione()
              + getJavaMailSender()
              + onApplicationEvent()
              - confirmRegistration()
          }
        }
      }
    }
  }
  

  com.unidates.Unidates.UniDates.Manager.Registrazione.OnRegistrationCompleteEvent -up-|> org.springframework.context.ApplicationEvent
  com.unidates.Unidates.UniDates.Manager.Registrazione.OnRegistrationCompleteEvent o-- com.unidates.Unidates.UniDates.Model.Entity.Utente : utente
  com.unidates.Unidates.UniDates.Manager.Registrazione.RegistrationListener .up.|> org.springframework.context.ApplicationListener
  com.unidates.Unidates.UniDates.Manager.Registrazione.RegistrationListener o-- com.unidates.Unidates.UniDates.Manager.Registrazione.ConfermaRegistrazione : confermaRegistrazione
  com.unidates.Unidates.UniDates.Manager.Registrazione.RegistrationListener o-- com.unidates.Unidates.UniDates.Manager.UserManager : service


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
